--- a/plugins/DangerousNether/config.yml
+++ b/plugins/DangerousNether/config.yml
@@ -44,7 +44,7 @@
 'Spawn Inferno ': true
 'Spawn Old Shadow ': false
 'Spawn Sherogath ': false
-'Spawn Sadness ': true
+'Spawn Sadness ': false
 'Spawn Necromancer ': false
 'Spawn Alpha Pigman ': true
 ':::::Monster Names - no Blanks:::::': ''
