--- a/plugins/VotingPlugin/VoteSites.yml
+++ b/plugins/VotingPlugin/VoteSites.yml
@@ -123,4 +123,15 @@ VoteSites:
     Rewards:
       Messages:
         Player: '&eThanks for voting on %ServiceSite%!'
+  MinecraftServersList:
+    Enabled: true
+    ServiceSite: MinecraftServersList
+    VoteURL: VoteURL
+    VoteDelay: 24
+    Item:
+      Material: GRASS
+      Amount: 1
+    Rewards:
+      Messages:
+        Player: '&aThanks for voting on %ServiceSite%!'
 EverySiteReward: []
