--- a/plugins/StaffToggle/config.yml
+++ b/plugins/StaffToggle/config.yml
@@ -15,6 +15,6 @@ staff:
     Rank: admin
     name: Sammy5k
   ChickensDying:
-    OnDuty: correct
+    OnDuty: nope
     Rank: admin
     name: ChickensDying
