--- a/plugins/Spartan/checks.yml
+++ b/plugins/Spartan/checks.yml
@@ -55,10 +55,10 @@ ImpossibleActions:
   cancel_seconds: 1
 Nuker:
   check_delay: true
-  check_breaks_per_sec: true
-  check_moves_in_between: true
+  check_breaks_per_sec: false
+  check_moves_in_between: false
   max_breaks_per_second: 50
-  cancel_seconds: 2
+  cancel_seconds: 1
 FastBow:
   check_bow_force: true
   check_bow_shots: true
