--- a/plugins/Spartan/checks.yml
+++ b/plugins/Spartan/checks.yml
@@ -54,7 +54,7 @@ ImpossibleActions:
   check_item_usage: true
   cancel_seconds: 1
 Nuker:
-  check_delay: true
+  check_delay: false
   check_breaks_per_sec: false
   check_moves_in_between: false
   max_breaks_per_second: 50
