--- a/plugins/Essentials/spawn.yml
+++ b/plugins/Essentials/spawn.yml
@@ -6,3 +6,10 @@ spawns:
     z: -41.41332265928405
     yaw: -45.59375
     pitch: 8.549795
+  resource: 
+    world: world_resource
+    x: 39.01174220076424
+    y: 70.0
+    z: -138.94317553328617
+    yaw: -268.81778
+    pitch: -10.5000105
