--- a/plugins/Towny/settings/config.yml
+++ b/plugins/Towny/settings/config.yml
@@ -41,64 +41,64 @@ levels:
     namePrefix: ''
     mayorPostfix: ''
     townBlockLimit: 16
-    upkeepModifier: 1.0
-    townOutpostLimit: 0
+    upkeepModifier: 1.1
+    townOutpostLimit: 1
   - numResidents: 2
     namePostfix: ' (Hamlet)'
     mayorPrefix: 'Chief '
     namePrefix: ''
     mayorPostfix: ''
     townBlockLimit: 32
-    upkeepModifier: 1.0
-    townOutpostLimit: 1
+    upkeepModifier: 1.1
+    townOutpostLimit: 2
   - numResidents: 6
     namePostfix: ' (Village)'
     mayorPrefix: 'Baron Von '
     namePrefix: ''
     mayorPostfix: ''
     townBlockLimit: 96
-    upkeepModifier: 1.0
-    townOutpostLimit: 1
+    upkeepModifier: 1.15
+    townOutpostLimit: 3
   - numResidents: 10
     namePostfix: ' (Town)'
     mayorPrefix: 'Viscount '
     namePrefix: ''
     mayorPostfix: ''
     townBlockLimit: 160
-    upkeepModifier: 1.0
-    townOutpostLimit: 2
+    upkeepModifier: 1.2
+    townOutpostLimit: 3
   - numResidents: 14
     namePostfix: ' (Large Town)'
     mayorPrefix: 'Count Von '
     namePrefix: ''
     mayorPostfix: ''
     townBlockLimit: 224
-    upkeepModifier: 1.0
-    townOutpostLimit: 2
+    upkeepModifier: 1.25
+    townOutpostLimit: 4
   - numResidents: 20
     namePostfix: ' (City)'
     mayorPrefix: 'Earl '
     namePrefix: ''
     mayorPostfix: ''
     townBlockLimit: 320
-    upkeepModifier: 1.0
-    townOutpostLimit: 3
+    upkeepModifier: 1.35
+    townOutpostLimit: 4
   - numResidents: 24
     namePostfix: ' (Large City)'
     mayorPrefix: 'Duke '
     namePrefix: ''
     mayorPostfix: ''
     townBlockLimit: 384
-    upkeepModifier: 1.0
-    townOutpostLimit: 3
+    upkeepModifier: 1.4
+    townOutpostLimit: 4
   - numResidents: 28
     namePostfix: ' (Metropolis)'
     mayorPrefix: 'Lord '
     namePrefix: ''
     mayorPostfix: ''
     townBlockLimit: 448
-    upkeepModifier: 1.0
-    townOutpostLimit: 4
+    upkeepModifier: 1.5
+    townOutpostLimit: 5
   # default Nation levels.
   nation_level:
   - kingPostfix: ''
@@ -188,11 +188,11 @@ town:
   # Default tax settings for new towns.
   default_taxes:
     # Default amount of tax of a new town. This must be lower than the economy.daily_taxes.max_tax_percent setting.
-    tax: '5.0'
+    tax: '0.0'
     # Default amount of shop tax of a new town.
-    shop_tax: '5.0'
+    shop_tax: '0.0'
     # Default amount of embassy tax of a new town.
-    embassy_tax: '5.0'
+    embassy_tax: '0.0'
     # Default amount for town's plottax costs.
     plot_tax: '0.0'
     # Default status of new town's taxpercentage. True means that the default_tax is treated as a percentage instead of a fixed amount.
@@ -348,12 +348,12 @@ global_town_settings:
   # to lose outposts. They will not be able to start new outposts until they have unclaimed outposts
   # to become under their limit. Likewise, towns that join a nation and receive bonus outposts will
   # be over their limit if they leave the nation.
-  limit_outposts_using_town_and_nation_levels: 'false'
+  limit_outposts_using_town_and_nation_levels: 'true'
   # When limit_outposts_using_town_and_nation_levels is also true, towns which are over their outpost
   # limit will not be able to use their /town outpost teleports for the outpost #'s higher than their limit,
   # until they have dropped below their limit.
   # eg: If their limit is 3 then they cannot use /t outpost 4
-  over_outpost_limits_stops_teleports: 'false'
+  over_outpost_limits_stops_teleports: 'true'
   # Allow the use of /town spawn
   # Valid values are: true, false, war, peace
   # When war or peace is set, it is only possible to teleport to the town,
@@ -377,7 +377,7 @@ global_town_settings:
   # When set to true both nation and ally spawn travel will also require the target town to have their status set to public.
   is_nation_ally_spawning_requiring_public_status: 'false'
   # If non zero it delays any spawn request by x seconds.
-  teleport_warmup_time: '0'
+  teleport_warmup_time: '3'
   # Respawn the player at his town spawn point when he/she dies
   town_respawn: 'false'
   # Town respawn only happens when the player dies in the same world as the town's spawn point.
@@ -612,7 +612,7 @@ protection:
   # Prevent the spawning of villager babies in towns.
   town_prevent_villager_breeding: 'false'
   # Disable creatures triggering stone pressure plates
-  disable_creature_pressureplate_stone: 'true'
+  disable_creature_pressureplate_stone: 'false'
  
   # Globally remove living entities in all worlds that have their flag set.
   world_mob_removal_entities: Monster,Guardian,Flying,Slime
@@ -857,40 +857,40 @@ economy:
   # Prefix to apply to all nation economy accounts.
   nation_prefix: nation-
   # The cost of renaming a town.
-  town_rename_cost: '0'
+  town_rename_cost: '250'
   # The cost of renaming a nation.
-  nation_rename_cost: '0'
+  nation_rename_cost: '2000'
  
   spawn_travel:
     # Cost to use /town spawn
     price_town_spawn_travel: '0.0'
     # Cost to use '/town spawn [town]' to another town in your nation.
-    price_town_nation_spawn_travel: '5.0'
+    price_town_nation_spawn_travel: '0.0'
     # Cost to use '/town spawn [town]' to another town in a nation that is allied with your nation.
-    price_town_ally_spawn_travel: '10.0'
+    price_town_ally_spawn_travel: '0.0'
     # Cost to use /town spawn [town]
     # This is paid to the town you goto.
-    price_town_public_spawn_travel: '10.0'
+    price_town_public_spawn_travel: '0.0'
     # When set to true, any cost paid by a player to use any variant of '/town spawn' will be paid to the town bank.
     # When false the amount will be paid to the server account whose name is set in the closed economy setting below..
     town_spawn_cost_paid_to_town: 'true'
  
   # The daily upkeep to remain neutral during a war. Neutrality will exclude you from a war event, as well as deterring enemies.
-  price_nation_neutrality: '100.0'
+  price_nation_neutrality: '10000.0'
  
   new_expand:
     # How much it costs to start a nation.
-    price_new_nation: '1000.0'
+    price_new_nation: '25000.0'
     # How much it costs to start a town.
-    price_new_town: '250.0'
+    price_new_town: '500.0'
     # How much it costs to make an outpost. An outpost isn't limited to being on the edge of town.
-    price_outpost: '500.0'
+    price_outpost: '5000.0'
     # The price for a town to expand one townblock.
-    price_claim_townblock: '25.0'
+    price_claim_townblock: '200.0'
     # How much it costs a player to buy extra blocks.
-    price_purchased_bonus_townblock: '25.0'
+    price_purchased_bonus_townblock: '150.0'
     # How much every extra bonus block costs more. Set to 1 to deactivate this. 1.2 means +20% to every bonus claim block cost.
-    price_purchased_bonus_townblock_increase: '1.0'
+    price_purchased_bonus_townblock_increase: '1.2'
  
   death:
     # Either fixed or percentage.
@@ -902,7 +902,7 @@ economy:
     # If True, only charge death prices for pvp kills. Not monsters/environmental deaths.
     price_death_pvp_only: 'false'
  
-    price_death: '1.0'
+    price_death: '0.0'
  
     price_death_town: '0.0'
  
@@ -943,13 +943,13 @@ economy:
     max_tax_percent: '25'
     # The server's daily charge on each nation. If a nation fails to pay this upkeep
     # all of it's member town are kicked and the Nation is removed.
-    price_nation_upkeep: '100.0'
+    price_nation_upkeep: '1000.0'
     # The server's daily charge on each town. If a town fails to pay this upkeep
     # all of it's residents are kicked and the town is removed.
-    price_town_upkeep: '10.0'
+    price_town_upkeep: '200.0'
     # Uses total amount of owned plots to determine upkeep instead of the town level (Number of residents)
     # calculated by (number of claimed plots X price_town_upkeep).
-    town_plotbased_upkeep: 'false'
+    town_plotbased_upkeep: 'true'
     # If set to true, the plot-based-upkeep system will be modified by the Town Levels' upkeep modifiers.
     town_plotbased_upkeep_affected_by_town_level_modifier: 'false'
     # If enabled and you set a negative upkeep for the town
@@ -1018,14 +1018,14 @@ war:
   economy:
     enemy:
       # Amount charged to place a warflag (payed to server).
-      place_flag: '10'
+      place_flag: '5000'
       # Amount payed from the flagbearer to the defender after defending the area.
-      defended_attack: '10'
+      defended_attack: '1000'
     # Defending town pays attaking flagbearer. If a negative (attacker pays defending town),
     # and the attacker can't pay, the attack is canceled.
-    townblock_won: '10'
+    townblock_won: '500'
     # Same as townblock_won but for the special case of winning the homeblock.
-    homeblock_won: '100'
+    homeblock_won: '1000'
  
  
   ############################################################
