--- a/plugins/Essentials/spawn.yml
+++ b/plugins/Essentials/spawn.yml
@@ -1,11 +1,11 @@
 spawns: 
   default: 
     world: world
-    x: -38.52324438384747
+    x: -38.19123364659414
     y: 68.0
-    z: -41.41332265928405
-    yaw: -45.59375
-    pitch: 8.549795
+    z: -41.18031053874572
+    yaw: -49.643463
+    pitch: 1.5000045
   resource: 
     world: world_resource
     x: 39.01174220076424
