--- a/plugins/WorldGuard/worlds/world/regions.yml
+++ b/plugins/WorldGuard/worlds/world/regions.yml
@@ -17,9 +17,10 @@ regions:
             unique-ids: [b7d591a6-7fb2-4346-968c-f58d00ea2a4a]
         flags:
             build: deny
-            blocked-cmds: [/t new, /t claim outpost, /t claim]
-            fall-damage: deny
             invincible: allow
+            use: allow
+            fall-damage: deny
+            blocked-cmds: [/t new, /t claim outpost, /t claim]
             pvp: deny
             mob-spawning: deny
             fire-spread: deny
