--- a/plugins/mcMMO/flatfile/parties.yml
+++ b/plugins/mcMMO/flatfile/parties.yml
@@ -2,7 +2,7 @@ Softies:
   Leader: b7d591a6-7fb2-4346-968c-f58d00ea2a4a|SoftNina
   Locked: true
   Level: 10
-  Xp: 890
+  Xp: 1187
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
@@ -14,14 +14,13 @@ Softies:
     MISC: true
   Members:
   - b7d591a6-7fb2-4346-968c-f58d00ea2a4a|SoftNina
-  - fa0f1dc1-4c4b-4b94-bc3c-d9de62fba23e|End3rduty
   - 9550dfb4-a66f-42fe-a15d-a494e68a783e|martyiswarty
   - d7394801-5961-45b8-9448-fe5d445122bd|k0tu
 Pu$$yRippers:
   Leader: 903bd7f5-b440-4c08-a817-772b6861d1d4|ItzMecha
   Locked: true
   Level: 10
-  Xp: 4597
+  Xp: 2406
   Ally: ''
   ExpShareMode: EQUAL
   ItemShareMode: NONE
@@ -40,7 +39,7 @@ RetiredMC:
   Leader: 2b43669e-676d-4941-9ddc-af5d43f6635e|zNihility
   Locked: true
   Level: 10
-  Xp: 1680
+  Xp: 2595
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
@@ -54,12 +53,15 @@ RetiredMC:
   - 2b43669e-676d-4941-9ddc-af5d43f6635e|zNihility
   - ea42a580-355a-4981-bed2-65dc5fccbeb6|Grepses
   - b6bb0a32-3f3a-4e47-8db1-026a17cc5bbd|ChickensDying
+  - fa0f1dc1-4c4b-4b94-bc3c-d9de62fba23e|End3rduty
+  - 2c057e34-fc9d-471b-aee6-c20aecaef9e6|War_Eagle34
+  - 58619ad3-29e8-41e6-affa-da663472fcc8|tuellie
 Jahaven:
   Leader: 23757a5a-ed62-4ef1-8bb6-62de752f3a94|JahTheSequel
   Password: OnJah
   Locked: true
   Level: 10
-  Xp: 1607
+  Xp: 3230
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
@@ -73,3 +75,21 @@ Jahaven:
   - 23757a5a-ed62-4ef1-8bb6-62de752f3a94|JahTheSequel
   - 0f1e98ce-7ae8-4cff-b7b3-f1f3025a7c59|El_Mexicano_Hdz
   - 9c831db3-4541-4516-8b38-e76652d6603d|Villhalian
+quasi=gay:
+  Leader: 1b40ec65-b03a-419b-85bc-2366be4b08b9|t_troublesome
+  Password: lololol
+  Locked: true
+  Level: 1
+  Xp: 4019
+  Ally: ''
+  ExpShareMode: NONE
+  ItemShareMode: NONE
+  ItemShareType:
+    LOOT: true
+    MINING: true
+    HERBALISM: true
+    WOODCUTTING: true
+    MISC: true
+  Members:
+  - 1b40ec65-b03a-419b-85bc-2366be4b08b9|t_troublesome
+  - b810c108-3479-4a54-98e5-c74c2951cde7|Kryold
