--- a/plugins/Slimefun/Items.yml
+++ b/plugins/Slimefun/Items.yml
@@ -3943,7 +3943,7 @@ OUTPUT_CHEST:
   allow-disenchanting: true
   required-permission: ''
 TABLE_SAW:
-  enabled: true
+  enabled: false
   can-be-used-in-workbenches: false
   hide-in-guide: false
   allow-enchanting: true
